feat: continue backend implementation with security enhancements, DTOs, mappers, and API updates